--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "lab -a code -L"
+    "test": "NODE_ENV=dev lab -a code -L"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "eslint-config-hapi": "^9.1.0",
     "eslint-plugin-hapi": "^4.0.0",
-    "lab": "^10.6.0"
+    "lab": "^10.6.0",
+    "code": "^3.0.0"
   }
 }
