this doesn't do anything, remove

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "NODE_ENV=dev lab -a code -L"
+    "test": "lab -a code -L"
   },
   "repository": {
     "type": "git",
